<resources>
    <string name="app_name">FluffStroller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">620587919270274</string>
    <string name="fb_login_protocol_scheme">fb620587919270274</string>

    <string name="menu_home">Home</string>
    <string name="menu_walk_in_progress">Walk in Progress</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_walks_history">Walks History</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_about_us">About Us</string>
    <string name="find_stroller">Find Stroller</string>
    <string name="walk_price">Walk Price</string>
    <string name="walk_time">Walk Time</string>
    <string name="walk_time_dot">Walk Time:</string>
    <string name="fees">Fees</string>
    <string name="total_price">Total Price</string>
    <string name="select_dogs">Select Dogs</string>
    <string name="dog_name">Dog Name</string>
    <string name="please_add_dogs_in_your_profile">Please add dogs in your profile!</string>
    <string name="empty_required_fields">Some required fields are empty!</string>
    <string name="label">Label</string>
    <string name="hint">Hint</string>
    <string name="waiting_for_stroller">Waiting for Stroller</string>
    <string name="waiting_for_stroller_to_start">Waiting for Stroller to Start Walk</string>
    <string name="waiting_for_payment">Waiting for Payment</string>
    <string name="_0_minutes_remaining">(0 minutes remaining)</string>
    <string name="cancel_walk">Cancel Walk</string>
    <string name="current_walk_details">Current Walk Details</string>
    <string name="dogs">Dogs:</string>
    <string name="initial_walk_time">Initial Walk Time:</string>
    <string name="total_price_semicolon">Total Price:</string>
    <string name="current_requests">Current Requests</string>
    <string name="no_requests">No Requests</string>
    <string name="stroller_name">John Doe</string>
    <string name="stroller">Stroller</string>
    <string name="stroller_actual_name">Stroller name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email_label">E-mail:</string>
    <string name="name_label">Name:</string>
    <string name="description_label">Description:</string>
    <string name="rating">Rating:</string>
    <string name="empty_rating">(No Rating)</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="call">call</string>
    <string name="profile">Profile</string>
    <string name="walk_in_progress">Walk In Progress</string>
    <string name="view_on_map">View On Map</string>
    <string name="empty_price">0 RON</string>
    <string name="stroller_info">Stroller Contact Information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available_walks">Available Walks</string>
    <string name="stroller_action_tabs">Stroller Action Tabs</string>
    <string name="walking_time">Walking Time:</string>
    <string name="_0_minutes">0 minutes</string>
    <string name="request">Request</string>
    <string name="no_available_walks_nearby">No Available Walks nearby</string>
    <string name="map">Map</string>
    <string name="empty_duration">0:0</string>
    <string name="duration">Duration (min)</string>
    <string name="finish_walk">Finish Walk</string>
    <string name="distance_metres">Distance (km)</string>
    <string name="zero">0</string>
    <string name="or">or</string>
    <string name="connect_with">Connect with</string>

    <string name="app_logo">Application Logo</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="email_hint">name@example.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_hint">************</string>
    <string name="forgot_password_click_here">Forgot your password? <font color='#F57F17'>Click here!</font></string>
    <string name="no_account_signup">You don\'t have an account? <font color='#F57F17'>Register now!</font></string>
    <string name="already_registered">Already registered? <font color='#F57F17'>Login!</font></string>
    <string name="title_authentication_activity">Authentication</string>

    <string name="area_radius">Area Radius</string>
    <string name="_0_km">0 km</string>
    <string name="waiting_for_dog_owner_approval">Waiting for Dog Owner Approval</string>
    <string name="walk_not_started">Walk Not Started</string>
    <string name="start_walk">Start Walk</string>
    <string name="dog_owner_info">Dog Owner Info</string>

    <string name="description">Description</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="breed">Breed</string>
    <string name="question_mark">\?</string>
    <string name="dog_name_hint">Buddy</string>
    <string name="dog_breed_hint">Golden Retriever</string>
    <string name="age_hint">2 years</string>
    <string name="age">Age</string>
    <string name="description_hint">My dog enjoys walking in the park..</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="text">Text</string>
    <string name="add_dog_fragment">Add Dog Fragment</string>
    <string name="my_dogs">My Dogs</string>
    <string name="average_rating">Average Rating</string>
    <string name="reviews">Reviews</string>
    <string name="remove">Remove</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ok">OK</string>
    <string name="fluff_stroller">Fluff Stroller</string>
    <string name="gps_enable_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gallery">Gallery</string>
    <string name="add_button">Add Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="dash">-</string>
    <string name="years">years</string>
    <string name="remove_dog">Remove Dog</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="add_dog">Add Dog</string>
    <string name="dog_image">Dog Image</string>
    <string name="message">Message</string>
    <string name="review_question">Would you like to submit a review</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="for_word">for</string>
    <string name="open_parenthesis">(</string>
    <string name="amount">Amount:</string>
    <string name="complete_payment_for_current_walk">Complete payment for current walk</string>
    <string name="pay">Pay</string>
    <string name="ron">RON</string>
    <string name="cancel_walk_message">Are you sure you want to cancel this search for strollers?</string>
    <string name="transfer_money_message">Are you sure you want to transfer the money?</string>
    <string name="administration_and_payment_fees">Administration and Payment Fees:</string>
    <string name="administration_fees">Administration Fees:</string>
    <string name="who_are_we">Who are we?</string>
    <string name="presentation">We are two animal lovers who came up with a solution to the problems we face every day. Your dog needs a walk right away, but you have an important task to finish? Fluff Stroller is here to help you!</string>
    <string name="fees_text_about_page">A commission of 10% is charged for each transaction.</string>
    <string name="if_you_have_any_questions">If you have any questions:</string>
    <string name="contact_us_via_e_mail">Contact us via e-mail</string>
    <string name="please_select_a_user_type">Please select a User Type</string>
    <string name="confirm">Confirm</string>
    <string name="user_type_spinner">User Type Spinner</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="current_balance">Current Balance:</string>
    <string name="transfer">Transfer</string>
    <string name="transferable_money">Transferable Money:</string>
    <string name="could_not_connect_to_payment_server">Could not connect to Payment server</string>
    <string name="could_not_transfer_money">Could not transfer money</string>
    <string name="money_transferred">Money transferred</string>
    <string name="money_that_will_be_transferred_to_a_personal_account">Money that will be transferred to a personal account</string>
    <string name="reset_email_sent">Reset email sent</string>
    <string name="email_field_must_be_set">Email field must be set</string>
    <string name="email_send_failed">Email could not be sent</string>
    <string name="date">Date:</string>
    <string name="walks_history">Walks History</string>
    <string name="owner_name">Owner name:</string>
    <string name="couldnt_get_past_walks">Could not get past walks</string>
</resources>