<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.register.RegisterFragment">

    <ImageView
        android:id="@+id/appLogoRegisterFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogoRegisterFragment">

        <com.example.fluffstroller.utils.components.TextWithLabel
            android:id="@+id/nameTextWithLabelRegisterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/stroller_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            app:label="@string/name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_linear_layout_spacing" />

        <com.example.fluffstroller.utils.components.TextWithLabel
            android:id="@+id/emailTextWithLabelRegisterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:label="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_linear_layout_spacing" />

        <com.example.fluffstroller.utils.components.TextWithLabel
            android:id="@+id/passwordTextWithLabelRegisterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:label="@string/password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_linear_layout_spacing" />

        <com.example.fluffstroller.utils.components.TextWithLabel
            android:id="@+id/confirmPasswordTextWithLabelRegisterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:label="@string/confirm_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_linear_layout_spacing" />

        <Spinner
            android:id="@+id/userTypeSpinnerRegisterFragment"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/registerButtonRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/alreadyRegisteredTextViewRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/already_registered"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>