<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_walk_in_progress"
            android:icon="@drawable/ic_menu_walk_in_progress"
            android:title="@string/menu_walk_in_progress" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_details_and_contact"
            android:icon="@drawable/ic_menu_details_and_contact"
            android:title="@string/menu_details_and_contact" />
    </group>
</menu>